# word2vec

./: README.md  cuda_setup.sh  pyproject.toml  requirements.txt
emb/: nnlm_embeddings.pth
exps/cbow/: events.out.tfevents.1755733894.DESKTOP-G57Q9EP.7325.0  events.out.tfevents.1755734704.DESKTOP-G57Q9EP.7471.0  events.out.tfevents.1755734843.DESKTOP-G57Q9EP.7579.0  events.out.tfevents.1755734957.DESKTOP-G57Q9EP.7665.0  events.out.tfevents.1755735033.DESKTOP-G57Q9EP.7795.0  events.out.tfevents.1755805632.DESKTOP-G57Q9EP.9282.0  events.out.tfevents.1755806084.DESKTOP-G57Q9EP.9419.0
exps/nnlm/: events.out.tfevents.1755807003.DESKTOP-G57Q9EP.9652.0
w2v_demo/: analogies.py  data.py  main.py  models.py  utils.py
w2v_demo/configs/: analogies.gin  cbow-103.gin  cbow-2.gin  nnlm-103.gin  nnlm-2.gin  skipgram-103.gin  skipgram-2.gin
word2vec/: analogy.py  data.py  main.py  models.py  utils.py
word2vec/configs/: analogy-cbow-2.gin  analogy-skip-2.gin  cbow-103.gin  cbow-2.gin  nnlm-103.gin  nnlm-2.gin  skip-103.gin  skip-2.gin
