[project]
name = "word2vec"
version = "0.0.1"
authors = [
  { name="Warren Lemmon", email="lemmon.warren@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/wlemmon/word2vec"

[tool.setuptools]
packages = ["word2vec"]